refactor:  adjust the swagger parameters/body-request definitions
